gen/cc/cflags/nixitch/parser/NixParser.java
// This is a generated file. Not intended for manual editing.
package cc.cflags.nixitch.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static cc.cflags.nixitch.psi.NixTypes.*;
import static cc.cflags.nixitch.psi.NixParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class NixParser implements PsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ADD_EXPR) {
      r = add_expr(b, 0);
    }
    else if (t == ATTR) {
      r = attr(b, 0);
    }
    else if (t == ATTR_ASSIGN) {
      r = attr_assign(b, 0);
    }
    else if (t == ATTR_PATH) {
      r = attr_path(b, 0);
    }
    else if (t == ATTRS) {
      r = attrs(b, 0);
    }
    else if (t == BIND_SET) {
      r = bind_set(b, 0);
    }
    else if (t == BINDS) {
      r = binds(b, 0);
    }
    else if (t == BN_LAMBDA) {
      r = bn_lambda(b, 0);
    }
    else if (t == BOOL_EXPR) {
      r = bool_expr(b, 0);
    }
    else if (t == CALL_ARGS) {
      r = call_args(b, 0);
    }
    else if (t == EVAL_EXPR) {
      r = eval_expr(b, 0);
    }
    else if (t == EXPR) {
      r = expr(b, 0);
    }
    else if (t == EXPR_APP) {
      r = expr_app(b, 0);
    }
    else if (t == EXPR_FUNCTION) {
      r = expr_function(b, 0);
    }
    else if (t == EXPR_IF) {
      r = expr_if(b, 0);
    }
    else if (t == EXPR_LIST) {
      r = expr_list(b, 0);
    }
    else if (t == EXPR_OP) {
      r = expr_op(b, 0);
    }
    else if (t == EXPR_SELECT) {
      r = expr_select(b, 0);
    }
    else if (t == EXPR_SIMPLE) {
      r = expr_simple(b, 0);
    }
    else if (t == FACTOR) {
      r = factor(b, 0);
    }
    else if (t == FN_LAMBDA) {
      r = fn_lambda(b, 0);
    }
    else if (t == FORMAL) {
      r = formal(b, 0);
    }
    else if (t == FORMAL_SET) {
      r = formal_set(b, 0);
    }
    else if (t == FORMALS) {
      r = formals(b, 0);
    }
    else if (t == IMPORT_STMT) {
      r = import_stmt(b, 0);
    }
    else if (t == IND_STRING_PARTS) {
      r = ind_string_parts(b, 0);
    }
    else if (t == INHERIT_ATTRS) {
      r = inherit_attrs(b, 0);
    }
    else if (t == LAMBDA) {
      r = lambda(b, 0);
    }
    else if (t == LET_IN) {
      r = let_in(b, 0);
    }
    else if (t == LITERAL) {
      r = literal(b, 0);
    }
    else if (t == LOGICAL) {
      r = logical(b, 0);
    }
    else if (t == MUL_EXPR) {
      r = mul_expr(b, 0);
    }
    else if (t == NIX_INIT) {
      r = nix_init(b, 0);
    }
    else if (t == PATH_ASSIGN) {
      r = path_assign(b, 0);
    }
    else if (t == PATH_STMT) {
      r = path_stmt(b, 0);
    }
    else if (t == PATHS_ASSIGN) {
      r = paths_assign(b, 0);
    }
    else if (t == PATHS_EXPR) {
      r = paths_expr(b, 0);
    }
    else if (t == PRIMARY) {
      r = primary(b, 0);
    }
    else if (t == PURE_BIND) {
      r = pure_bind(b, 0);
    }
    else if (t == REL_EXPR) {
      r = rel_expr(b, 0);
    }
    else if (t == RELATIVE) {
      r = relative(b, 0);
    }
    else if (t == REQUIRE_EXPR) {
      r = require_expr(b, 0);
    }
    else if (t == STRING_ATTR) {
      r = string_attr(b, 0);
    }
    else if (t == STRING_PARTS) {
      r = string_parts(b, 0);
    }
    else if (t == UNARY_OP) {
      r = unary_op(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return nixFile(b, l + 1);
  }

  /* ********************************************************** */
  // add_op factor
  public static boolean add_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "add_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, "<add expr>");
    r = add_op(b, l + 1);
    r = r && factor(b, l + 1);
    exit_section_(b, l, m, ADD_EXPR, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // PLUS | MINUS | CONCAT | UPDATE
  static boolean add_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "add_op")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, CONCAT);
    if (!r) r = consumeToken(b, UPDATE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ID | OR_KW | FNUTT string_attr FNUTT
  public static boolean attr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<attr>");
    r = consumeToken(b, ID);
    if (!r) r = consumeToken(b, OR_KW);
    if (!r) r = attr_2(b, l + 1);
    exit_section_(b, l, m, ATTR, r, false, null);
    return r;
  }

  // FNUTT string_attr FNUTT
  private static boolean attr_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attr_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FNUTT);
    r = r && string_attr(b, l + 1);
    r = r && consumeToken(b, FNUTT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // attr_path ASSIGN expr
  public static boolean attr_assign(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attr_assign")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, "<attr assign>");
    r = attr_path(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    p = r; // pin = 2
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, ATTR_ASSIGN, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // attr (DOT attr)*
  public static boolean attr_path(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attr_path")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<attr path>");
    r = attr(b, l + 1);
    r = r && attr_path_1(b, l + 1);
    exit_section_(b, l, m, ATTR_PATH, r, false, null);
    return r;
  }

  // (DOT attr)*
  private static boolean attr_path_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attr_path_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!attr_path_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "attr_path_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // DOT attr
  private static boolean attr_path_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attr_path_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && attr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // attr*
  public static boolean attrs(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attrs")) return false;
    Marker m = enter_section_(b, l, _NONE_, "<attrs>");
    int c = current_position_(b);
    while (true) {
      if (!attr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "attrs", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, ATTRS, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // LCURLY binds RCURLY
  public static boolean bind_set(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bind_set")) return false;
    if (!nextTokenIs(b, LCURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LCURLY);
    r = r && binds(b, l + 1);
    r = r && consumeToken(b, RCURLY);
    exit_section_(b, m, BIND_SET, r);
    return r;
  }

  /* ********************************************************** */
  // ( (require_expr | inherit_attrs | attr_assign) SEMI) +
  public static boolean binds(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binds")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<binds>");
    r = binds_0(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!binds_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "binds", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, BINDS, r, false, null);
    return r;
  }

  // (require_expr | inherit_attrs | attr_assign) SEMI
  private static boolean binds_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binds_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = binds_0_0(b, l + 1);
    r = r && consumeToken(b, SEMI);
    exit_section_(b, m, null, r);
    return r;
  }

  // require_expr | inherit_attrs | attr_assign
  private static boolean binds_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binds_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = require_expr(b, l + 1);
    if (!r) r = inherit_attrs(b, l + 1);
    if (!r) r = attr_assign(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // formal_set NAMED ID
  public static boolean bn_lambda(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bn_lambda")) return false;
    if (!nextTokenIs(b, LCURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = formal_set(b, l + 1);
    r = r && consumeTokens(b, 0, NAMED, ID);
    exit_section_(b, m, BN_LAMBDA, r);
    return r;
  }

  /* ********************************************************** */
  // bool_op logical
  public static boolean bool_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool_expr")) return false;
    if (!nextTokenIs(b, "<bool expr>", AND, OR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, "<bool expr>");
    r = bool_op(b, l + 1);
    r = r && logical(b, l + 1);
    exit_section_(b, l, m, BOOL_EXPR, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // AND | OR
  static boolean bool_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool_op")) return false;
    if (!nextTokenIs(b, "", AND, OR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, OR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LCURLY binds RCURLY
  public static boolean call_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_args")) return false;
    if (!nextTokenIs(b, LCURLY)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = consumeToken(b, LCURLY);
    p = r; // pin = 1
    r = r && report_error_(b, binds(b, l + 1));
    r = p && consumeToken(b, RCURLY) && r;
    exit_section_(b, l, m, CALL_ARGS, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // DOT attr_path
  static boolean cont_path(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cont_path")) return false;
    if (!nextTokenIs(b, DOT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && attr_path(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IND_STRING_OPEN ind_string_parts IND_STRING_CLOSE
  static boolean doc_string(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_string")) return false;
    if (!nextTokenIs(b, IND_STRING_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IND_STRING_OPEN);
    r = r && ind_string_parts(b, l + 1);
    r = r && consumeToken(b, IND_STRING_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LPAREN expr RPAREN
  public static boolean eval_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eval_expr")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, EVAL_EXPR, r);
    return r;
  }

  /* ********************************************************** */
  // expr_function
  public static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<expr>");
    r = expr_function(b, l + 1);
    exit_section_(b, l, m, EXPR, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expr_select+
  public static boolean expr_app(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_app")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<expr app>");
    r = expr_select(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!expr_select(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr_app", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, EXPR_APP, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ID COLON expr_function
  //                 | expr_if
  //                 | WITH expr SEMI expr_function
  //                 | ASSERT expr SEMI expr_function
  //                 | let_in expr_function
  //                 | lambda COLON expr_function
  public static boolean expr_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_function")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<expr function>");
    r = expr_function_0(b, l + 1);
    if (!r) r = expr_if(b, l + 1);
    if (!r) r = expr_function_2(b, l + 1);
    if (!r) r = expr_function_3(b, l + 1);
    if (!r) r = expr_function_4(b, l + 1);
    if (!r) r = expr_function_5(b, l + 1);
    exit_section_(b, l, m, EXPR_FUNCTION, r, false, null);
    return r;
  }

  // ID COLON expr_function
  private static boolean expr_function_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_function_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, COLON);
    r = r && expr_function(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // WITH expr SEMI expr_function
  private static boolean expr_function_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_function_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, WITH);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, SEMI);
    r = r && expr_function(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ASSERT expr SEMI expr_function
  private static boolean expr_function_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_function_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSERT);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, SEMI);
    r = r && expr_function(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // let_in expr_function
  private static boolean expr_function_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_function_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = let_in(b, l + 1);
    r = r && expr_function(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // lambda COLON expr_function
  private static boolean expr_function_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_function_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = lambda(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && expr_function(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IF expr THEN expr ELSE expr
  //           | expr_op
  public static boolean expr_if(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_if")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<expr if>");
    r = expr_if_0(b, l + 1);
    if (!r) r = expr_op(b, l + 1);
    exit_section_(b, l, m, EXPR_IF, r, false, null);
    return r;
  }

  // IF expr THEN expr ELSE expr
  private static boolean expr_if_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_if_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IF);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, THEN);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, ELSE);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr_select*
  public static boolean expr_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_list")) return false;
    Marker m = enter_section_(b, l, _NONE_, "<expr list>");
    int c = current_position_(b);
    while (true) {
      if (!expr_select(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr_list", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, EXPR_LIST, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // logical bool_expr* | unary_op logical
  public static boolean expr_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<expr op>");
    r = expr_op_0(b, l + 1);
    if (!r) r = expr_op_1(b, l + 1);
    exit_section_(b, l, m, EXPR_OP, r, false, null);
    return r;
  }

  // logical bool_expr*
  private static boolean expr_op_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_op_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = logical(b, l + 1);
    r = r && expr_op_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // bool_expr*
  private static boolean expr_op_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_op_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!bool_expr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr_op_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // unary_op logical
  private static boolean expr_op_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_op_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = unary_op(b, l + 1);
    r = r && logical(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr_simple ( (cont_path (or_select)?) | OR_KW )?
  public static boolean expr_select(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_select")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<expr select>");
    r = expr_simple(b, l + 1);
    r = r && expr_select_1(b, l + 1);
    exit_section_(b, l, m, EXPR_SELECT, r, false, null);
    return r;
  }

  // ( (cont_path (or_select)?) | OR_KW )?
  private static boolean expr_select_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_select_1")) return false;
    expr_select_1_0(b, l + 1);
    return true;
  }

  // (cont_path (or_select)?) | OR_KW
  private static boolean expr_select_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_select_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr_select_1_0_0(b, l + 1);
    if (!r) r = consumeToken(b, OR_KW);
    exit_section_(b, m, null, r);
    return r;
  }

  // cont_path (or_select)?
  private static boolean expr_select_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_select_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = cont_path(b, l + 1);
    r = r && expr_select_1_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (or_select)?
  private static boolean expr_select_1_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_select_1_0_0_1")) return false;
    expr_select_1_0_0_1_0(b, l + 1);
    return true;
  }

  // (or_select)
  private static boolean expr_select_1_0_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_select_1_0_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = or_select(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // literal_simple_string
  //               | doc_string
  //                 /* Let expressions `let {..., body = ...}' are just desugared
  //                    into `(rec {..., body = ...}).body'. */
  //               | LET bind_set
  //               | REC bind_set
  //               | literal_list
  //               | import_stmt
  //               | literal
  //               | bind_set
  //               | eval_expr
  public static boolean expr_simple(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_simple")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<expr simple>");
    r = literal_simple_string(b, l + 1);
    if (!r) r = doc_string(b, l + 1);
    if (!r) r = expr_simple_2(b, l + 1);
    if (!r) r = expr_simple_3(b, l + 1);
    if (!r) r = literal_list(b, l + 1);
    if (!r) r = import_stmt(b, l + 1);
    if (!r) r = literal(b, l + 1);
    if (!r) r = bind_set(b, l + 1);
    if (!r) r = eval_expr(b, l + 1);
    exit_section_(b, l, m, EXPR_SIMPLE, r, false, null);
    return r;
  }

  // LET bind_set
  private static boolean expr_simple_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_simple_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LET);
    r = r && bind_set(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // REC bind_set
  private static boolean expr_simple_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_simple_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, REC);
    r = r && bind_set(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // primary mul_expr*
  public static boolean factor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<factor>");
    r = primary(b, l + 1);
    r = r && factor_1(b, l + 1);
    exit_section_(b, l, m, FACTOR, r, false, null);
    return r;
  }

  // mul_expr*
  private static boolean factor_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!mul_expr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "factor_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // ID NAMED formal_set
  public static boolean fn_lambda(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fn_lambda")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, NAMED);
    r = r && formal_set(b, l + 1);
    exit_section_(b, m, FN_LAMBDA, r);
    return r;
  }

  /* ********************************************************** */
  // ID
  //          | ID IS expr
  //          | ELLIPSIS
  public static boolean formal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formal")) return false;
    if (!nextTokenIs(b, "<formal>", ELLIPSIS, ID)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<formal>");
    r = consumeToken(b, ID);
    if (!r) r = formal_1(b, l + 1);
    if (!r) r = consumeToken(b, ELLIPSIS);
    exit_section_(b, l, m, FORMAL, r, false, null);
    return r;
  }

  // ID IS expr
  private static boolean formal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formal_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, IS);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LCURLY formals RCURLY
  public static boolean formal_set(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formal_set")) return false;
    if (!nextTokenIs(b, LCURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LCURLY);
    r = r && formals(b, l + 1);
    r = r && consumeToken(b, RCURLY);
    exit_section_(b, m, FORMAL_SET, r);
    return r;
  }

  /* ********************************************************** */
  // formal (COMMA formal)*
  public static boolean formals(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formals")) return false;
    if (!nextTokenIs(b, "<formals>", ELLIPSIS, ID)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<formals>");
    r = formal(b, l + 1);
    r = r && formals_1(b, l + 1);
    exit_section_(b, l, m, FORMALS, r, false, null);
    return r;
  }

  // (COMMA formal)*
  private static boolean formals_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formals_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!formals_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "formals_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }
